--- a/styles/footer.css
+++ b/styles/footer.css
@@ -3,25 +3,54 @@
     position: absolute;
     bottom: 0;
 
-    height: 140px;
+    height: 150px;
     width: 100%;
-    background-color: #212121;
+    background-color: #000;
     justify-content: center;
     align-items: center;
 }
-
-footer .conteiner{
+.footer footer {
+    width: 80%;
+    height: 100%;
+}
+ .conteiner{
     display: flex;
-    flex-direction: row;
+    width: 100%;
+    height: 100%;
+    
     justify-content: space-between;
     
-    
+}
+ .conteiner .item {
+    flex-direction: column;    
 }
 
-footer .conteiner .item {
-  
-    flex-direction: column;
-    
-    background-color: aqua; 
-    
+.conteiner .item h2{
+    font-weight: 700;
+    color: #fff;
+    margin-bottom: 5px;
+    margin-top: 10px;
+    font-family: 'Dosis', sans-serif;
+    text-transform: uppercase;
+}
+.conteiner .item h3 {
+    font-weight: 500;
+    color: #757575;
+    margin-bottom: 3px;
+    font-family: 'Dosis', sans-serif;
+    text-transform: uppercase;
+}
+.conteiner .item h4 {
+    font-weight: 500;
+    color: #757575;
+    margin-bottom: 3px;
+    font-family: 'Dosis', sans-serif;
+}
+.conteiner .item i{
+    color: #757575;
+    font-size: 25px;
+    padding-right: 30px;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 10px;
 }
