--- a/styles/header.css
+++ b/styles/header.css
@@ -4,12 +4,15 @@ header {
     justify-content: space-between;
     
     height: 110px;
-    background-color: #000;
+    background-color: #e9e9f3;
+    
 }
+
 header h3 {
-    color: #fff;
-    font-weight: bold;
+    color: #2d2f36;
+    font-weight: 600;
     font-size: 25px;
+    font-family: 'Dosis', sans-serif;
     margin-top: 15px;
     margin-left: 15px;
 }
@@ -26,7 +29,7 @@ header .title {
     align-items: center;
 }
 header .title .icons {
-    color:#fff;
+    color: #c9c9d3;
     margin-right: 30px;
     margin-top: 9px;
     
@@ -58,7 +61,8 @@ nav .lista ul li {
 nav .lista ul li a {
     text-decoration: none;
     font-size: 16px;
-    color: #757575;
+   
+    color: #8d8ba1;
     font-weight: 700;
     font-family: 'Dosis', sans-serif;
     text-transform: uppercase;
@@ -66,7 +70,7 @@ nav .lista ul li a {
 
 nav .lista ul li a:hover{
     font-size: 25px;
-    color: #fff;
+    color: #6291ab;
     transition-duration:0.5s;
 }
 
@@ -92,12 +96,12 @@ nav .conta button {
     align-items: center;
     justify-content: center;
 
-    background-color: #424242;
-    color: #bdbdbd;  
+    background-color: #b1b0c1;
+    color: #424242;  
 }
 
 nav .conta button:hover {
-    background-color: #fff;
+    background-color: #69bbd8;
     color: #212121;
     transition-duration:0.7s;
 }
