--- a/styles/footer.css
+++ b/styles/footer.css
@@ -5,7 +5,7 @@
 
     height: 150px;
     width: 100%;
-    background-color: #e9e9f3;
+    background-color: #111111;
     justify-content: center;
     align-items: center;
 }
@@ -27,7 +27,7 @@
 
 .conteiner .item h2{
     font-weight: 700;
-    color: #2d2f36;
+    color: #ffd764;
     margin-bottom: 5px;
     margin-top: 10px;
     font-family: 'Dosis', sans-serif;
@@ -35,19 +35,19 @@
 }
 .conteiner .item h3 {
     font-weight: 500;
-    color: #757575;
+    color: #c4c7ce;
     margin-bottom: 3px;
     font-family: 'Dosis', sans-serif;
     text-transform: uppercase;
 }
 .conteiner .item h4 {
     font-weight: 500;
-    color: #757575;
+    color: #c4c7ce;
     margin-bottom: 3px;
     font-family: 'Dosis', sans-serif;
 }
 .conteiner .item i{
-    color: #757575;
+    color: #c4c7ce;
     font-size: 25px;
     padding-right: 30px;
     justify-content: space-between;
@@ -56,6 +56,6 @@
 }
 
 .item i:hover{
-    color: #6291ab;
+    color: #ffd764;
     transition-duration:0.3s;
 }
