--- a/styles/header.css
+++ b/styles/header.css
@@ -1,111 +1,108 @@
 header {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    
-    height: 110px;
-    background-color: #111111;
-    
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 100%;
+  height: 110px;
+  background-color: #111111;
 }
 
 header h3 {
-    color: #ffd764;
-    font-weight: 600;
-    font-size: 25px;
-    font-family: 'Dosis', sans-serif;
-    margin-top: 15px;
-    margin-left: 15px;
+  color: #ffd764;
+  font-weight: 600;
+  font-size: 2.5rem;
+  font-family: "Dosis", sans-serif;
+  margin-top: 15px;
+  margin-left: 15px;
 }
 header hr {
-    margin-top: 5px;
-    
+  margin-top: 5px;
 }
 
 header .title {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-content: center;
-    align-items: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-content: center;
+  align-items: center;
 }
 header .title .icons {
-    color: #c4c7ce;
-    margin-right: 30px;
-    margin-top: 9px;
-    
+  color: #c4c7ce;
+  margin-right: 30px;
+  margin-top: 9px;
 }
 header .title .icons i {
-    padding: 10px;
+  padding: 10px;
 }
 
-header .title .icons i:hover{
-    color: #ffd764;
+header .title .icons i:hover {
+  color: #ffd764;
 }
 
 nav {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
-li{
-    list-style: none;
+li {
+  list-style: none;
 }
 nav .lista {
-    display: flex;
-    align-items: center;
-    margin-left: 30px;
+  display: flex;
+  align-items: center;
+  margin-left: 30px;
 }
 
 nav .lista ul li {
-    margin-right: 35px;
-    margin-left: 15px;
+  margin-right: 35px;
+  margin-left: 15px;
 }
 
 nav .lista ul li a {
-    text-decoration: none;
-    font-size: 16px;
-   
-    color: #c4c7ce;
-    font-weight: 700;
-    font-family: 'Dosis', sans-serif;
-    text-transform: uppercase;
+  text-decoration: none;
+  font-size: 16px;
+
+  color: #c4c7ce;
+  font-weight: 700;
+  font-family: "Dosis", sans-serif;
+  text-transform: uppercase;
 }
 
-nav .lista ul li a:hover{
-    font-size: 25px;
-    color: #ffd764;
-    transition-duration:0.5s;
+nav .lista ul li a:hover {
+  font-size: 2.5rem;
+  color: #ffd764;
+  transition-duration: 0.5s;
 }
 
-nav .conta{
-    display: flex;
-    margin-left: 24px;
-    position: relative;
+nav .conta {
+  display: flex;
+  margin-left: 24px;
+  position: relative;
 }
 
 nav .conta button {
-    font-size: 12px;
-    font-weight: 700;
-    font-family: 'Dosis', sans-serif;
+  font-size: 1.2rem;
+  font-weight: 700;
+  font-family: "Dosis", sans-serif;
 
-    width: 60px;
-    height: 37px;
-    border-radius: 22px;
-    margin-right: 20px;
-    margin-bottom: 7px;
-    border: none;
+  width: 60px;
+  height: 37px;
+  border-radius: 22px;
+  margin-right: 20px;
+  margin-bottom: 7px;
+  border: none;
 
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
-    background: #ffd764;
-    color: #424242;  
+  background: #ffd764;
+  color: #424242;
 }
 
 nav .conta button:hover {
-    background-color: rgba(255,255,255, 0.8);
-    color: #212121;
-    transition-duration:0.7s;
+  background-color: rgba(255, 255, 255, 0.8);
+  color: #212121;
+  transition-duration: 0.7s;
 }
