--- a/styles/header.css
+++ b/styles/header.css
@@ -61,7 +61,7 @@ nav .lista ul li {
 
 nav .lista ul li a {
   text-decoration: none;
-  font-size: 16px;
+  font-size: 1.6rem;
 
   color: #c4c7ce;
   font-weight: 700;
