--- a/styles/respo.css
+++ b/styles/respo.css
@@ -6,7 +6,7 @@
   .one,
   .two,
   .three {
-    background-color: #fff;
+    background-color: #ffd764;
     height: 5px;
     width: 100%;
     margin: 6px auto;
@@ -28,7 +28,7 @@
     width: 100vw;
     height: 100vh;
 
-    background-color: #616161;
+    background-color: #111111;
     z-index: 10;
     display: flex;
     justify-content: center;
@@ -61,9 +61,15 @@
     line-height: 4rem;
     display: block;
   }
+
+  header img {
+    width: 130px;
+    margin-left: 50px;
+    padding: 30px 0;
+  }
 }
 
-@media (max-width: 756px) {
+@media (max-width: 824px) {
   .conteudo {
     height: 130px;
   }
@@ -74,15 +80,17 @@
   .footer {
     height: 100px;
   }
-
-  nav .lista ul li {
-    margin-right: 25px;
-    margin-left: 5px;
+  header img {
+    width: 120px;
+    margin-left: 10px;
+    padding: 10px 0;
   }
 
-  nav .lista ul li a {
-    font-size: 1.2rem;
+  header nav ul li a {
+    font-size: 1.4rem;
+    padding: 19px;
   }
+
   footer .conteiner .item i {
     font-size: 1.8rem;
     padding-right: 15px;
@@ -97,5 +105,18 @@
   }
   footer .conteiner .item h4 {
     font-size: 1.11rem;
+  }
+}
+
+@media (max-width: 600px) {
+  header img {
+    width: 115px;
+    margin-left: 5px;
+    padding: 4px 0;
+  }
+
+  header nav ul li a {
+    font-size: 1.1rem;
+    padding: 15px;
   }
 }
